# Anilist-Wrapped

./: .gitignore  .vercelignore  README.md  app.py  index.html  main.py  netlify.toml  pyproject.toml  requirements.txt  rewind.py  script.js  share_card.py  styles.css
.netlify/functions/: app.py  requirements.txt
data/: anime.py  favorites.py  manga.py
functions/: api.py  rewind.py
functions/data/: anime.py  favorites.py
netlify/functions/: api.py
src/: index.html
src/css/: styles.css
src/js/: app.js
static/css/: styles.css
static/js/: app.js
templates/: index.html  report_content.html
