[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anilist-wrapped"
version = "1.0.0"
authors = [
  { name="Gemini", email="author@example.com" },
]
description = "A cinematic AniList Wrapped experience."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dateutil",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "numpy>=2.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
